# api-salesdataset

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  kubernetes.yml  main.py  pyproject.toml
app/core/: config.py  database.py
app/crud/: base.py  category.py  payment_method.py  product.py  region.py  sales_order.py
app/models/: __init__.py  category.py  payment_method.py  product.py  region.py  sales_order.py
app/routers/: category.py  payment_method.py  product.py  region.py  sales_order.py
app/schemas/: category.py  payment_method.py  product.py  region.py  sales_order.py
docs/: 00-prompt-scriar-estrutura.md  01-prompt-project-sales.md  check-seeds.sql  schema.sql  seeds.sql
